objects/ESN_Best_Practice__c.object
<CustomObject>
    <fields>
        <fullName>ESN_BP_Actions_Text__c</fullName>
        <description>Technical field used to remove HTML formatting from rich text field Actions</description>
        <inlineHelpText>Technical field used to remove HTML formatting from rich text field Actions</inlineHelpText>
        <label>Actions Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Actions__c</fullName>
        <description>Is searchable
Double click to update &gt; Rich Text (letters and or numbers + bullets...) (up to 32768 characters)
TIP! Manage bullets with the dedicated button so that colors apply
Save to see the change (top of the page)</description>
        <inlineHelpText>Is searchable
Double click to update &gt; Rich Text (letters and or numbers + bullets...) (up to 32768 characters)
TIP! Manage bullets with the dedicated button so that colors apply
Save to see the change (top of the page)</inlineHelpText>
        <label>Actions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Actor1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Is not searchable
Double click to update
Write actor&apos;s name to find him in SFDC directory (synchronised with PR AD)
Save to see the change (top of the page)
Job title will automatically appear</description>
        <inlineHelpText>Is not searchable
Double click to update
Write actor&apos;s name to find him in SFDC directory (synchronised with PR AD)
Save to see the change (top of the page)
Job title will automatically appear</inlineHelpText>
        <label>Actor 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Actor2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Is not searchable
Double click to update
Write actor&apos;s name to find him in SFDC directory (synchronised with PR AD)
Save to see the change (top of the page)
Job title will automatically appear</description>
        <inlineHelpText>Is not searchable
Double click to update
Write actor&apos;s name to find him in SFDC directory (synchronised with PR AD)
Save to see the change (top of the page)
Job title will automatically appear</inlineHelpText>
        <label>Actor 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practices_Co_author1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Actor3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Is not searchable
Double click to update
Write actor&apos;s name to find him in SFDC directory (synchronised with PR AD)
Save to see the change (top of the page)
Job title will automatically appear</description>
        <inlineHelpText>Is not searchable
Double click to update
Write actor&apos;s name to find him in SFDC directory (synchronised with PR AD)
Save to see the change (top of the page)
Job title will automatically appear</inlineHelpText>
        <label>Actor 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practices_Actor3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Actor_1_Title__c</fullName>
        <description>Is not searchable
Automatically filled-in once the actor name has been saved</description>
        <formula>ESN_BP_Actor1__r.Title</formula>
        <inlineHelpText>Is not searchable
Automatically filled-in once the actor name has been saved</inlineHelpText>
        <label>Actor 1 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Actor_2_Title__c</fullName>
        <description>Is not searchable
Automatically filled-in once the actor name has been saved</description>
        <formula>ESN_BP_Actor2__r.Title</formula>
        <inlineHelpText>Is not searchable
Automatically filled-in once the actor name has been saved</inlineHelpText>
        <label>Actor 2 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Actor_3_Title__c</fullName>
        <description>Is not searchable
Automatically filled-in once the actor name has been saved</description>
        <formula>ESN_BP_Actor3__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is not searchable
Automatically filled-in once the actor name has been saved</inlineHelpText>
        <label>Actor 3 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Actors__c</fullName>
        <description>Technical field used to facilitate retrieval of project managers Chatter profile informations</description>
        <formula>IF(NOT(ISBLANK( ESN_BP_Actor1__c )),ESN_BP_Actor1__c &amp; &apos;,&apos;,&apos;&apos;)&amp; 
IF(NOT(ISBLANK( ESN_BP_Actor2__c )),ESN_BP_Actor2__c &amp; &apos;,&apos;,&apos;&apos;)&amp; 
IF(NOT(ISBLANK( ESN_BP_Actor3__c )),ESN_BP_Actor3__c &amp; &apos;,&apos;,&apos;&apos;)&amp; 
IF(NOT(ISBLANK( ESN_BP_Actor4__c )),ESN_BP_Actor4__c &amp; &apos;,&apos;,&apos;&apos;)&amp; 
IF(NOT(ISBLANK( ESN_BP_Actor5__c )),ESN_BP_Actor5__c &amp; &apos;,&apos;,&apos;&apos;)&amp; 
IF(NOT(ISBLANK( ESN_BP_Actor6__c )),ESN_BP_Actor6__c &amp; &apos;,&apos;,&apos;&apos;)&amp; 
IF(NOT(ISBLANK( ESN_BP_Actor7__c )),ESN_BP_Actor7__c &amp; &apos;,&apos;,&apos;&apos;)&amp; 
IF(NOT(ISBLANK( ESN_BP_Actor8__c )),ESN_BP_Actor8__c,&apos;&apos;)</formula>
        <inlineHelpText>Technical field used to facilitate retrieval of project managers Chatter profile informations</inlineHelpText>
        <label>Actors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Affiliate_Image__c</fullName>
        <description>Double click to update
Copy paste Document ID
Save to see the change (top of the page)</description>
        <inlineHelpText>Double click to update
Copy paste Document ID
Save to see the change (top of the page)</inlineHelpText>
        <label>Affiliate Image</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Affiliate_Name__c</fullName>
        <description>Double click to update
Copy paste Affiliate Name
Save to see the change (top of the page)</description>
        <inlineHelpText>Double click to update
Copy paste Affiliate Name
Save to see the change (top of the page)</inlineHelpText>
        <label>Affiliate Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Benefit10__c</fullName>
        <description>Does not appear on BP template/is searchable 
Double click to update &gt; Text (letters and or numbers) (up to 255 characters) 
Save to see the change (top of the page)</description>
        <inlineHelpText>Does not appear on BP template/is searchable 
Double click to update &gt; Text (letters and or numbers) (up to 255 characters) 
Save to see the change (top of the page)</inlineHelpText>
        <label>Benefit 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Benefit1__c</fullName>
        <description>Does not appear on BP template/is searchable 
Double click to update &gt; Text (letters and or numbers) (up to 255 characters) 
Save to see the change (top of the page)</description>
        <inlineHelpText>Does not appear on BP template/is searchable 
Double click to update &gt; Text (letters and or numbers) (up to 255 characters) 
Save to see the change (top of the page)</inlineHelpText>
        <label>Benefit 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Benefit2__c</fullName>
        <description>Does not appear on BP template/is searchable 
Double click to update &gt; Text (letters and or numbers) (up to 255 characters) 
Save to see the change (top of the page)</description>
        <inlineHelpText>Does not appear on BP template/is searchable 
Double click to update &gt; Text (letters and or numbers) (up to 255 characters) 
Save to see the change (top of the page)</inlineHelpText>
        <label>Benefit 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Benefits__c</fullName>
        <formula>UPPER(ESN_BP_Benefit1__c)  &amp; &apos;;&apos;&amp;
UPPER(ESN_BP_Benefit2__c)  &amp; &apos;;&apos;&amp;
UPPER(ESN_BP_Benefit3__c)  &amp; &apos;;&apos;&amp;
UPPER(ESN_BP_Benefit4__c)  &amp; &apos;;&apos;&amp;
UPPER(ESN_BP_Benefit5__c)  &amp; &apos;;&apos;&amp;
UPPER(ESN_BP_Benefit6__c)  &amp; &apos;;&apos;&amp;
UPPER(ESN_BP_Benefit7__c)  &amp; &apos;;&apos;&amp;
UPPER(ESN_BP_Benefit8__c)  &amp; &apos;;&apos;&amp;
UPPER(ESN_BP_Benefit9__c)  &amp; &apos;;&apos;&amp;
UPPER(ESN_BP_Benefit10__c)  &amp; &apos;;&apos;</formula>
        <label>Benefits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Best_Practice_Number__c</fullName>
        <description>Does not appear on BP template/is not searchable
Double click to update &gt; Text (letters and or numbers)
Save to see the change (top of the page)</description>
        <inlineHelpText>Does not appear on BP template/is not searchable
Double click to update &gt; Text (letters and or numbers)
Save to see the change (top of the page)</inlineHelpText>
        <label>Best Practice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Category_Priority__c</fullName>
        <description>Technical field that indicates the display priority of the category in BP applications display</description>
        <formula>CASE(  UPPER(ESN_BP_Category__c), 
       &apos;MARKETING&apos;, 10, 
       &apos;LEGAL&apos;, 9,
       &apos;COMMUNICATIONS&apos;, 8,
       &apos;COMMERCIAL&apos;, 7,
       &apos;FINANCE&apos;, 6,
       &apos;CSR RESPONSIBLE DRINKING&apos;, 5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Technical field that indicates the display priority of the category in BP applications display</inlineHelpText>
        <label>Category Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Category__c</fullName>
        <description>Is searchable
Double click to update
Save to see the change (top of the page)&quot;</description>
        <inlineHelpText>Is searchable
Double click to update
Save to see the change (top of the page)</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Challenge_Text__c</fullName>
        <description>Technical field used to remove HTML format from Rich text field Challenge.</description>
        <inlineHelpText>Technical field used to remove HTML format from Rich text field Challenge.</inlineHelpText>
        <label>Challenge Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Challenge__c</fullName>
        <description>Is searchable
Double click to update &gt; Rich Text (letters and or numbers + bullets...) (up to 32768 characters)
TIP! Manage bullets with the dedicated button so that colors apply
Save to see the change (top of the page)</description>
        <inlineHelpText>Is searchable
Double click to update &gt; Rich Text (letters and or numbers + bullets...) (up to 32768 characters)
TIP! Manage bullets with the dedicated button so that colors apply
Save to see the change (top of the page)</inlineHelpText>
        <label>Challenge</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Contributor1_Mail__c</fullName>
        <label>Contributor1 Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Contributor1_Title__c</fullName>
        <description>Is searchable 
Double click to update 
Write actor&apos;s title.
Save to see the change (top of the page)</description>
        <inlineHelpText>Is searchable 
Double click to update 
Write actor&apos;s title.
Save to see the change (top of the page)</inlineHelpText>
        <label>Contributor 1 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Contributor1__c</fullName>
        <description>Is searchable 
Double click to update 
Write actor&apos;s name.
Save to see the change (top of the page)</description>
        <inlineHelpText>Is searchable 
Double click to update 
Write actor&apos;s name.
Save to see the change (top of the page)</inlineHelpText>
        <label>Contributor 1</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Contributor2_Mail__c</fullName>
        <label>Contributor2 Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Contributor2_Title__c</fullName>
        <description>Is searchable 
Double click to update 
Write actor&apos;s title.
Save to see the change (top of the page)</description>
        <inlineHelpText>Is searchable 
Double click to update 
Write actor&apos;s title.
Save to see the change (top of the page)</inlineHelpText>
        <label>Contributor 2 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Contributor2__c</fullName>
        <description>Is searchable 
Double click to update 
Write actor&apos;s name.
Save to see the change (top of the page)</description>
        <inlineHelpText>Is searchable 
Double click to update 
Write actor&apos;s name.
Save to see the change (top of the page)</inlineHelpText>
        <label>Contributor 2</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Contributor3_Mail__c</fullName>
        <label>Contributor3 Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Contributor3_Title__c</fullName>
        <description>Is searchable 
Double click to update 
Write actor&apos;s title.
Save to see the change (top of the page)</description>
        <inlineHelpText>Is searchable 
Double click to update 
Write actor&apos;s title.
Save to see the change (top of the page)</inlineHelpText>
        <label>Contributor 3 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Contributor3__c</fullName>
        <description>Is searchable 
Double click to update 
Write actor&apos;s name.
Save to see the change (top of the page)</description>
        <inlineHelpText>Is searchable 
Double click to update 
Write actor&apos;s name.
Save to see the change (top of the page)</inlineHelpText>
        <label>Contributor 3</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Description_Text__c</fullName>
        <description>Technical field used to remove HTML formatting from Rich text field Description</description>
        <inlineHelpText>Technical field used to remove HTML formatting from Rich text field Description</inlineHelpText>
        <label>Description Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Description__c</fullName>
        <description>Is searchable
Double click to update &gt; Rich Text (letters and or numbers + bullets...) (up to 32768 characters)
TIP! Manage bullets with the dedicated button so that colors apply
Save to see the change (top of the page)</description>
        <inlineHelpText>Is searchable
Double click to update &gt; Rich Text (letters and or numbers + bullets...) (up to 32768 characters)
TIP! Manage bullets with the dedicated button so that colors apply
Save to see the change (top of the page)</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Finalist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finalist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Media_URLs__c</fullName>
        <description>Is not searchable
Double click to update &gt;  Text (letters and or numbers + bullets...) (up to 10000 characters)
Copy paste ID document (images and PDF) and video URLs, separated with ;
TIP! Media will appear in same order
Save to see the change (top of the page)</description>
        <inlineHelpText>Is not searchable
Double click to update &gt; Text (letters, numbers + bullets...) (up to 10000 characters)
paste ID document (images and PDF) &amp; video URLs, separated with ;
TIP! Media will appear in same order
Save to see the change (top of the page)</inlineHelpText>
        <label>Media URLs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Results_Text__c</fullName>
        <description>Technical fields used to remove HTML formatting from rich text field Results</description>
        <inlineHelpText>Technical fields used to remove HTML formatting from rich text field Results</inlineHelpText>
        <label>Results Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Results__c</fullName>
        <description>Is searchable
Double click to update &gt; Rich Text (letters and or numbers + bullets...) (up to 32768 characters)
TIP! Manage bullets with the dedicated button so that colors apply
Save to see the change (top of the page)</description>
        <inlineHelpText>Is searchable
Double click to update &gt; Rich Text (letters and or numbers + bullets...) (up to 32768 characters)
TIP! Manage bullets with the dedicated button so that colors apply
Save to see the change (top of the page)</inlineHelpText>
        <label>Results</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Subcategory__c</fullName>
        <description>Is not searchable
Double click to update
Choose in picklist
Save to see the change (top of the page)</description>
        <inlineHelpText>Is not searchable
Double click to update
Choose in picklist
Save to see the change (top of the page)</inlineHelpText>
        <label>Subcategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Video_URL__c</fullName>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Winner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Winner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESN_BP_current_year__c</fullName>
        <description>Technical field that indicates that the BP is of the current year. Used to display current year BPs.</description>
        <formula>ESN_BP_Year__c =  YEAR(TODAY())</formula>
        <inlineHelpText>Technical field that indicates that the BP is of the current year. Used to display current year BPs</inlineHelpText>
        <label>BP of current year</label>
        <type>Checkbox</type>
    </fields>
    <label>Best Practice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ESN_BP_Best_Practice_Number__c</columns>
        <columns>NAME</columns>
        <columns>ESN_BP_Category__c</columns>
        <columns>ESN_BP_Benefits__c</columns>
        <columns>ESN_BP_Affiliate_Image__c</columns>
        <columns>ESN_BP_Media_URLs__c</columns>
        <columns>ESN_BP_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Best Practices</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BP_2014_Actors</fullName>
        <columns>NAME</columns>
        <columns>ESN_BP_Actor1__c</columns>
        <columns>ESN_BP_Contributor1_Mail__c</columns>
        <columns>ESN_BP_Actor2__c</columns>
        <columns>ESN_BP_Contributor2_Mail__c</columns>
        <columns>ESN_BP_Actor3__c</columns>
        <columns>ESN_BP_Contributor3_Mail__c</columns>
        <columns>ESN_BP_Actor4__c</columns>
        <columns>ESN_BP_Contributor4_Mail__c</columns>
        <columns>ESN_BP_Actor5__c</columns>
        <columns>ESN_BP_Contributor5_Mail__c</columns>
        <columns>ESN_BP_Actor6__c</columns>
        <columns>ESN_BP_Contributor6_Mail__c</columns>
        <columns>ESN_BP_Actor7__c</columns>
        <columns>ESN_BP_Contributor7_Mail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ESN_BP_current_year__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BP 2014 Actors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Best_Pratices_2015</fullName>
        <columns>NAME</columns>
        <columns>ESN_BP_Category__c</columns>
        <columns>ESN_BP_Finalist__c</columns>
        <columns>ESN_BP_Winner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ESN_BP_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>Best Pratices 2015</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Best_practices_2014</fullName>
        <columns>ESN_BP_Best_Practice_Number__c</columns>
        <columns>NAME</columns>
        <columns>ESN_BP_Category__c</columns>
        <columns>ESN_BP_Description_Text__c</columns>
        <columns>ESN_BP_Finalist__c</columns>
        <columns>ESN_BP_Winner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ESN_BP_Year__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </filters>
        <label>Best practices 2014</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Best Practice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Best Practices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>